WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
259674
unionRect(const Vector<LayoutRect>&) behaves incorrectly with empty rects
https://bugs.webkit.org/show_bug.cgi?id=259674
Summary
unionRect(const Vector<LayoutRect>&) behaves incorrectly with empty rects
Simon Fraser (smfr)
Reported
2023-07-31 20:45:05 PDT
unionRect(const Vector<LayoutRect>&) behaves incorrectly if the input vector contains a single zero-size rect with a non-zero location; it will union with the empty rect, and therefore return the empty rect.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-07-31 20:45:36 PDT
<
rdar://problem/113183595
>
Simon Fraser (smfr)
Comment 2
2023-07-31 20:48:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/16267
EWS
Comment 3
2023-08-01 09:31:24 PDT
Committed
266479@main
(0ab891185786): <
https://commits.webkit.org/266479@main
> Reviewed commits have been landed. Closing PR #16267 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug