Cherry-pick 0ab891185786. rdar://115707089

unionRect(const Vector<LayoutRect>&) behaves incorrectly with empty rects
    https://bugs.webkit.org/show_bug.cgi?id=259674
    rdar://113183595

    Reviewed by Alan Baradlay.

    unionRect(const Vector<LayoutRect>&) behaves incorrectly if the input vector contains
    a single zero-size rect with a non-zero location; it will union with the empty rect,
    and therefore return the empty rect.

    This is not known to change any behavior, but a future change in bug 259672
    will exercise this code.

    * Source/WebCore/platform/graphics/LayoutRect.cpp:
    (WebCore::unionRect):

    Canonical link: https://commits.webkit.org/266479@main

Canonical link: https://commits.webkit.org/265870.560@safari-7616-branch